# Sintellii-Web-Api-v1

./: .gitignore  Cargo.toml  LICENSE  README.md  __init__.py  sintelli_api.js  sintelli_api.ts  tsconfig.json
.github/workflows/: publish.yml
JavaScript/: sintelli_api.js
Python/: README.md  setup.py
Rust/: Cargo.toml
Rust/src/: lib.rs
TypeScript/: sintelli_api.ts
src/: lib.rs
